//
// Copyright 2023 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.attestation.v1;

import "proto/attestation/evidence.proto";

option go_package = "proto/oak/attestation/v1";
option java_multiple_files = true;
option java_package = "com.google.oak.attestation.v1";

// Message for passing embedded certificate authority information between
// layers. Will never appear in the evidence that is sent to the client.
message CertificateAuthority {
  // ECA private key that will be used by a layer to sign a certificate for the
  // next layer.
  bytes eca_private_key = 1;
}

// Message that is sent between DICE layers.
message DiceData {
  Evidence evidence = 1;
  CertificateAuthority certificate_authority = 2;
}
